tests/fixtures/errors/unresolved_type.assura
// MUST REJECT A02001
// Unknown type in a type definition field should be rejected.

type Basket {
    fruit: Banana;
}
